--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: "mainFont";
+    src: url(../src/assets/fonts/Montserrat-VariableFont_wght.ttf);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    font-family: "mainFont";
+}
+.star-line{
+    width: 75px;
+    background-color: black;
+    height: 3px;
+    border-radius: 10px;
+}
+.star-icon{
+    width: 40px;
+    color: black;
 }
